Setup font awesome icons

--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ baseurl:          /
 
 author:
   name:           'Julian Frattini'
-  url:            https://x.com/frattinij1'
-  twitter:        https://x.com/frattinij1'
+  url:            https://x.com/frattinij1
+  twitter:        https://x.com/frattinij1
   linkedin:       https://www.linkedin.com/in/julian-frattini-88993a258/
   github:         https://github.com/JulianFrattini
   orcid:          https://orcid.org/0000-0003-3995-6125
