--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 
 # Setup
 title:            Julian Frattini
-tagline:          'Ph.D. Student at the Blekinge Institute of Technology'
-description:      'Ph.D. Student at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology, Sweden</a>'
+tagline:          'Adjunct at the Blekinge Institute of Technology'
+description:      'Adjunct at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology, Sweden</a>'
 url:              https://julianfrattini.github.io
 baseurl:          /
 
