Updated website for Postdoc

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        pretty
 
 # Setup
 title:            Julian Frattini
-tagline:          'Adjunct at the Blekinge Institute of Technology'
-description:      'Adjunct at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology, Sweden</a>'
+tagline:          'Postdoc at Chalmers'
+description:      'Postdoctoral Researcher at the <a href="https://www.chalmers.se/en/departments/cse/our-research/interaction-design-and-software-engineering/" target="_blank">Chalmers University of Technology, Sweden</a>'
 url:              https://julianfrattini.github.io
 baseurl:          /
 
